# orzmic-data-back-end

./: CMakeLists.txt  CMakePresets.json  README.md
resources/: collect.py  config.yaml  local.db  orzmic_song.db  songs.json
src/: main.cpp  main.hpp
src/common/: http_util.hpp  log_system.hpp  prevent_inject.hpp  self_exception.hpp  utils.hpp
src/configuration/: config.hpp  define.hpp  global.hpp
src/routers/: access_control_router.cpp  access_control_router.hpp  orzmic_router.cpp  orzmic_router.hpp
src/services/orzmic/: orzmic_service.hpp
src/test/: self_test.hpp
